<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyActivity"
    android:background="@drawable/background_android_flash">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_user"
        android:layout_marginTop="85dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/hint_text_user" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_pass"
        android:layout_below="@+id/et_user"
        android:layout_alignLeft="@+id/et_user"
        android:layout_alignStart="@+id/et_user"
        android:hint="@string/hint_text_pass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name"
        android:id="@+id/b_einloggen"
        android:layout_below="@+id/et_pass"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:id="@+id/b_registration"
        android:layout_below="@+id/b_einloggen"
        android:layout_alignRight="@+id/b_einloggen"
        android:layout_alignEnd="@+id/b_einloggen"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical|center_horizontal" />

</RelativeLayout>
