<<<<<<< Updated upstream
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/sky_background"
    android:id="@+id/linearlayout_login">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_user"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_text_user"
        android:layout_marginTop="120dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_pass"
        android:password="true"
        android:fontFamily="arial"
        android:layout_gravity="center_horizontal"
        android:hint="@string/hint_text_pass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_name"
        android:background="@drawable/cloud_image_button"
        android:textColor="@color/black"
        android:id="@+id/b_einloggen"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="200dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cloud_image_button"
        android:text="@string/button_reg_name"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:id="@+id/b_registration"
        android:layout_marginTop="-150dp"
        android:layout_marginBottom="50dp"/>


</LinearLayout>
=======
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyActivity"
    android:id="@+id/loginLayout"
    android:background="@drawable/sky_background">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_user"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="350dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_text_user" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_pass"
        android:password="true"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="305dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/hint_text_pass" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="215dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginBottom="215dp"
        android:text="@string/button_name"
        android:background="@drawable/cloud_image_button"
        android:textColor="@color/black"
        android:id="@+id/b_einloggen"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="350dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/cloud_image_button"
        android:text="@string/button_reg_name"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:id="@+id/b_registration" />


</RelativeLayout>
>>>>>>> Stashed changes
